Reduced the size of the Dockerfile, updated documentation